Closed Bug 739118 Opened 13 years ago Closed 13 years ago

Audio is hanging and crashing fairly often in ICS-rebased gonk

Categories

(Core :: Audio/Video, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: cjones, Assigned: mwu)

References

Details

Attachments

(1 file)

This can be very reliably reproduced by typing on the gaia keyboard (when audio feedback is enabled).
Assignee: nobody → mwu
Attachment #609189 - Flags: review?(jones.chris.g)
Comment on attachment 609189 [details] [diff] [review] Pad AudioTrack to match android's expectations \o/ landitlanditlandit
Attachment #609189 - Flags: review?(jones.chris.g) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: