Bug 739118 - Pad AudioTrack to match android's expectations, r=cjones NPOTB